--- a/config/kernel.config
+++ b/config/kernel.config
@@ -1282,7 +1282,7 @@ CONFIG_DM_VERITY=m
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
 CONFIG_NET_CORE=y
-CONFIG_BONDING=y
+# CONFIG_BONDING is not set
 # CONFIG_DUMMY is not set
 # CONFIG_EQUALIZER is not set
 CONFIG_MII=y
@@ -1838,6 +1838,8 @@ CONFIG_SPI_MASTER=y
 # CONFIG_SPI_OC_TINY is not set
 # CONFIG_SPI_PL022 is not set
 # CONFIG_SPI_PXA2XX_PCI is not set
+CONFIG_SPI_SUN7I=y
+CONFIG_SUN7I_SPI_NDMA=y
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_DESIGNWARE is not set
 
@@ -3947,4 +3949,4 @@ CONFIG_DQL=y
 CONFIG_NLATTR=y
 CONFIG_LRU_CACHE=m
 CONFIG_AVERAGE=y
-# CONFIG_CORDIC is not set 
+# CONFIG_CORDIC is not set
