Added two spi gpio expander modules

--- a/config/kernel.config
+++ b/config/kernel.config
@@ -1902,9 +1902,9 @@ CONFIG_GPIO_SUNXI=y
 # SPI GPIO expanders:
 #
 # CONFIG_GPIO_MAX7301 is not set
-# CONFIG_GPIO_MCP23S08 is not set
+CONFIG_GPIO_MCP23S08=m
 # CONFIG_GPIO_MC33880 is not set
-# CONFIG_GPIO_74X164 is not set
+CONFIG_GPIO_74X164=m
 
 #
 # AC97 GPIO expanders:
